content/modules/ROOT/examples/coolstore-web/base/web-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web
  labels:
    app: web
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: web
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: coolstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        deployment: web
    spec:
      containers:
        - name: web
          image: quay.io/coolstore-demo/web-nodejs:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
