content/modules/ROOT/examples/coolstore-web/base/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: web
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: coolstore
  name: web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
  sessionAffinity: None
  type: ClusterIP
