content/modules/ROOT/examples/coolstore-web/base/web-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: web
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: web
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: coolstore
  name: web
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: web
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
